Fixed select exchange and network issue in safari Fixed color flickering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,7 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-.shadow-card{
+.shadowed-button{
   transform: translate3d(0, 0, 0);
 }
 
@@ -272,4 +272,24 @@ tspan {
 }
 input::-webkit-input-placeholder {
   line-height:normal!important;
+}
+
+body::-webkit-scrollbar {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 29 51 / var(--tw-bg-opacity));
+}
+body::-webkit-scrollbar {
+  width: 0.375rem !important;
+}
+body::-webkit-scrollbar {
+  height: 0.375rem !important;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(100 116 139 / 0.5) !important;
+}
+body::-webkit-scrollbar-thumb {
+  --tw-bg-opacity: 1 !important;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 0.25rem !important;
 }
